@@ -122,7 +122,7 @@ legend {
     font-size: 90%;
 }
 
-#debugmodelabel{
+#debugmodelabel, #autogroupingmodelabel {
     font-weight : bold;
 }
 
@@ -156,6 +156,12 @@ legend {
                tal:attributes="checked here/getDebugMode" />
         <label for="debugmode" id="debugmodelabel">Debug/development mode</label>
         In debug-/development mode, stylesheets are not merged to composites, and caching and compression of css is disabled. The registry also sends http-headers to prevent browsers from caching the stylesheets. <br />Recommended during css-related development. Remember to  turn it off again, as the debugmode affects performance. 
+    </p>
+    <p>
+        <input type="checkbox" id="autogroupingmode" name="autogroupingmode:boolean"
+               tal:attributes="checked here/getAutoGroupingMode" />
+        <label for="autogroupingmode" id="autogroupingmodelabel">Automatic grouping mode</label>
+        In automatic grouping mode, resources are first ordered into mergeable groups based on their settings and after that merged based on their position in the registry.
     </p>
 
     <input type="submit" i18n:attributes="value" value="Save" style="float: none;" />
